tests/BuildSystem/Build/missing-node.llbuild
# Check we something sensible for target nodes never named.

# RUN: rm -rf %t.build
# RUN: mkdir -p %t.build
# RUN: cp %s %t.build/build.llbuild
# RUN: %{llbuild} buildsystem build --chdir %t.build --trace /tmp/x.trace build.llbuild > %t.out 2> %t.err || true
# RUN: %{FileCheck} %s --input-file %t.err --check-prefix=CHECK-FAILURE-ERR
#
# CHECK-FAILURE-ERR: missing input 'output' and no rule to build it
# CHECK-FAILURE-ERR: cannot build target {{.*}} due to missing input
# CHECK-FAILURE-ERR: error: build had 1 command failures

client:
  name: basic

targets:
  "": ["output"]
